
In the build system:
* Fixed bug that resulted in BLAS/ATLAS-based programs to not install in Fedora
* Eliminated hardcoded paths that made it impossible to package m8r
* Workaround for SCons bug #1488 
* Fixed MacPorts and Fink path detection for compilers other than gcc
  on Mac
* Fixed bug preventing spaces in ./configure arguments
* Fixed cfortran.h dependency in api/f77

===Changes in defaults===

==Release 1.2 (2011-07-14)==

===Additions and enhancements===

To the reproducible documents collection:

* swag/anisogath: Angle gathers in wave-equation imaging for
  transversely isotropic media (Alkhalifah and Fomel) 
* jsg/agath: Theory of 3-D angle gathers in wave-equation seismic
  imaging (Fomel)
* cwp/pept2011MicroearthquakeMonitoring: Micro-earthquake monitoring
  with sparsely-sampled data (Sava)
* jsg/vc3: Azimuthally anisotropic 3D velocity continuation (Burnett
  and Fomel)
* milano/taupvel: Velocity-independent tau-p moveout in a
  horizontally-layered VTI medium (Casasanta and Fomel)
* swag/thetaScan: Traveltime approximations for transversely isotropic
  media with an inhomogeneous background (Alkhalifah)
* cwp/geo2011WideAzimuthAngleDecomposition: Wide-azimuth angle gathers
  for wave-equation migration (Sava and Vlad)

To SCons:

* New directory structure:
  documentation under $RSFROOT/share/doc/madagascar
  other supplemental files under $RSFROOT/share/madagascar

To documentation:

* Info from VERSION.txt being printed in man pages for all programs
* Informative message at the end of successful global builds

To APIs:

* Fetch, Movie, and other enhancements in Python API
* Input class (can read int and float pars from stdin) in Python backup API
* Added reading complex-valued data to rsf_read in Matlab API

To the Python package:

* More intuitive interface for rsf.user.ivlad.run()
* Expanded options for rsf.user.ivlad.exe()

To programs:

* sfkdmig2d: 2-D Prestack Kirchhoff depth migration (borrowed from SU)
* wanttitle= option in thplot