@@ -1,3 +1,3 @@
 uses=['sfmath', 'sfunif2', 'sfput', 'sfsmooth', 'sfwindow', 'sfgrey', 'sfkirmod', 'sfcostaper', 'sffft1', 'sffft3', 'sfimag', 'sfcmplx', 'sfmul', 'sfcat', 'sfgraph']
 data=[]
-size=   69053704
+size=   52448704
